--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Good Grief Moon</title>
     <link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,700" rel="stylesheet" type="text/css" />
+     <link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css" />
     <!-- first link is for the Google Fonts. don't forget to create a font stack -->
 	<link rel="stylesheet" href="css/moon.css" />
 </head>
